# win-regional-reset

./: .gitignore  ANALYSIS.md  BackupCompression.psm1  Deploy-RegionalSettings-GP.ps1  FIXES_APPLIED.md  GITHUB_DESCRIPTION.md  LICENSE  README-master.md  README.md  Reset-RegionalSettings.ps1  SYNTAX_VALIDATION_REPORT.md  TIMEZONE_FEATURES.md  backup-manager.bat  config.json  deploy-regional-gp.bat  examples.bat  reset-regional.bat  test-backup.ps1  test_framework.py  test_report.json  validate.bat
.github/workflows/: powershell-validator.yml  powershell-windows-tests.yml  test-reset-regional.yml
config/: config-gp-template.json  config.json
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  RegionalSettingsReset  RegionalSettingsReset.cpp  config.json  custom_locales.json  regional_settings_reset.cpp  regional_settings_reset_v2  regional_settings_reset_v2.cpp  test_locales.sh
docs/: FOLDER_STRUCTURE.md  TESTING.md
group-policy/: Deploy-RegionalSettings-GP.ps1  deploy-regional-gp.bat
modules/: BackupCompression.psm1  IncrementalBackup.psm1
python/: README.md  config.json  launcher.py  regional_settings_reset.py  requirements.txt
scripts/: Reset-RegionalSettings.ps1  reset-regional.bat  scheduler.bat
tests/: Test-PowerShellSyntax.ps1  test_framework.py  test_report.json
